[tool.poetry]
name = "poseidon-api"
version = "0.18.2.dev"
description = "RESTful API for querying Poseidon"
authors = ["cglewis <clewis@iqt.org>"]
license = "Apache-2.0"
packages = [
    { include = "poseidon_api" },
]

[tool.poetry.dependencies]
python = ">=3.8 <3.11"
bjoern = "3.2.1"
falcon = "3.1.0"
falcon-cors = "1.1.7"
httpx = "0.23.0"
natural = "0.2.0"
poseidon-core = "0.18.1"

[tool.poetry.dev-dependencies]
black = "22.8.0"
docker = "6.0.0"
httmock = "1.4.0"
mock = "4.0.3"
netifaces = "0.11.0"
pylint = "2.15.2"
pytest-cov = "3.0.0"
pytest = "7.1.3"
pytype = "2022.8.30"
"ruamel.yaml" = "0.17.21"

[tool.poetry.scripts]
poseidon-api = 'poseidon_api.api:main'

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/poseidon"

[build-system]
requires = ["poetry-core>=1.0.0","setuptools<=65.0.0"]
build-backend = "poetry.core.masonry.api"
