[tool.poetry]
name = "poseidon-api"
version = "0.18.3.dev"
description = "RESTful API for querying Poseidon"
authors = ["cglewis <clewis@iqt.org>"]
license = "Apache-2.0"
packages = [
    { include = "poseidon_api" },
]

[tool.poetry.dependencies]
python = ">=3.8 <3.11"
bjoern = "3.2.2"
falcon = "3.1.1"
falcon-cors = "1.1.7"
httpx = "0.24.1"
natural = "0.2.0"
requests = "<2.32.3"
urllib3 = "<2.2.3"
poseidon-core = { path="../poseidon_core", develop=true }

[tool.poetry.dev-dependencies]
black = "24.3.0"
docker = "6.1.3"
httmock = "1.4.0"
mock = "5.0.2"
netifaces = "0.11.0"
pylint = "2.17.4"
pytest-cov = "4.1.0"
pytest = "7.3.1"
pytype = "2023.5.24"
"ruamel.yaml" = "0.17.28"

[tool.poetry.scripts]
poseidon-api = 'poseidon_api.api:main'

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/poseidon"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
