[tool.poetry]
name = "poseidon-cli"
version = "0.18.3.dev"
description = "Commandline tool for querying Poseidon via Prometheus"
authors = ["cglewis <clewis@iqt.org>"]
license = "Apache-2.0"
packages = [
    { include = "poseidon_cli" },
]

[tool.poetry.dependencies]
python = ">=3.8 <3.11"
cmd2 = "2.4.3"
natural = "0.2.0"
poseidon-core = { path="../poseidon_core", develop=true }
texttable = "1.6.7"

[tool.poetry.dev-dependencies]
black = "22.12.0"
docker = "6.0.1"
httmock = "1.4.0"
mock = "5.0.1"
netifaces = "0.11.0"
pylint = "2.16.0"
pytest-cov = "4.0.0"
pytest = "7.2.1"
pytype = "2023.1.31"
"ruamel.yaml" = "0.17.21"

[tool.poetry.scripts]
poseidon-cli = 'poseidon_cli.__main__:main'

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/poseidon"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
