[tool.poetry]
name = "poseidon-core"
version = "0.18.3.dev"
description = "Poseidon core package, an application that leverages software defined networks (SDN) to acquire and then feed network traffic to a number of analytic tools."
authors = ["cglewis <clewis@iqt.org>"]
license = "Apache-2.0"
packages = [
    { include = "poseidon_core" },
]

[tool.poetry.dependencies]
python = ">=3.8 <3.11"
faucetconfrpc = "0.22.45"
httpx = "0.23.3"
netaddr = "0.8.0"
pika = "1.3.1"
prometheus_client = "0.15.0"
pyyaml = "6.0"
schedule = "1.1.0"
transitions = "0.9.0"

[tool.poetry.dev-dependencies]
black = "22.12.0"
docker = "6.0.1"
httmock = "1.4.0"
mock = "5.0.1"
netifaces = "0.11.0"
pylint = "2.15.10"
pytest-cov = "4.0.0"
pytest = "7.2.1"
pytype = "2023.1.17"
"ruamel.yaml" = "0.17.21"

[tool.poetry.scripts]
poseidon-core = 'poseidon_core.__main__:main'

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/poseidon"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
