[tool.poetry]
name = "poseidon-core"
version = "0.18.3.dev"
description = "Poseidon core package, an application that leverages software defined networks (SDN) to acquire and then feed network traffic to a number of analytic tools."
authors = ["cglewis <clewis@iqt.org>"]
license = "Apache-2.0"
packages = [
    { include = "poseidon_core" },
]

[tool.poetry.dependencies]
python = ">=3.8 <3.11"
faucetconfrpc = "0.55.57"
httpx = "0.24.1"
netaddr = "0.8.0"
pika = "1.3.2"
prometheus_client = "^0.17.0"
pyyaml = "6.0"
schedule = "1.2.0"
transitions = "0.9.0"
requests = "<2.32.3"
urllib3 = "<2.0.8"

[tool.poetry.dev-dependencies]
black = "24.3.0"
docker = "6.1.3"
httmock = "1.4.0"
mock = "5.0.2"
netifaces = "0.11.0"
pylint = "2.17.4"
pytest-cov = "4.1.0"
pytest = "7.3.1"
pytype = "2023.5.24"
"ruamel.yaml" = "0.17.28"

[tool.poetry.scripts]
poseidon-core = 'poseidon_core.__main__:main'

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/poseidon"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
