[metadata]
name = poseidon_api
summary = RESTful API for querying Poseidon
license = Apache-2
author = cglewis
author-email = clewis@iqt.org
home-page = https://github.com/IQTLabs/poseidon/tree/master/pkg/api
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python

[entry_points]
console_scripts =
    poseidon-api = poseidon_api.__main__:main
