[metadata]
name = poseidon_api
summary = RESTful API for querying Poseidon
license = Apache-2
author = cglewis
author_email = clewis@iqt.org
home_page = https://github.com/IQTLabs/poseidon/tree/main/pkg/api
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python

[entry_points]
console_scripts =
    poseidon-api = poseidon_api.__main__:main
