[metadata]
name = poseidon_cli
summary = Commandline tool for querying Poseidon via Prometheus
license = Apache-2
author = cglewis
author-email = clewis@iqt.org
home-page = https://github.com/IQTLabs/poseidon/tree/master/pkg/cli
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python

[entry_points]
console_scripts =
    poseidon-cli = poseidon_cli.__main__:main
