[metadata]
name = poseidon_core
summary = Poseidon core package, an application that leverages software defined networks (SDN) to acquire and then feed network traffic to a number of analytic tools.
license = Apache-2
author = cglewis
author_email = clewis@iqt.org
home_page = https://github.com/IQTLabs/poseidon
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python

[entry_points]
console_scripts =
    poseidon-core = poseidon_core.__main__:main
